--- a/public/css/main.css
+++ b/public/css/main.css
@@ -317,7 +317,6 @@ html {
   }
 }
 .carousel-main-container .carousel-wrapper {
-  margin: 1rem;
   margin-left: 1.6rem;
   margin-right: 0;
   position: relative;
@@ -344,7 +343,7 @@ html {
   }
 }
 .carousel-main-container .carousel-wrapper .carousel-container {
-  height: 43rem;
+  height: 44rem;
   width: 100%;
   display: flex;
   list-style: none;
